Docker files added

--- a/Springboot_backend/pensioner-detail/pom.xml
+++ b/Springboot_backend/pensioner-detail/pom.xml
@@ -99,6 +99,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>pmp-pensioner-detail-executable</finalName>
 	</build>
 
 </project>
