--- a/Springboot_backend/pmp-server/src/main/resources/application.yml
+++ b/Springboot_backend/pmp-server/src/main/resources/application.yml
@@ -1,7 +1,10 @@
 spring:
   application:
     name: pmp-server
-server-port: '8761'
+
+server:
+  port: 8761
+
 eureka:
   client:
     register-with-eureka: false
