--- a/Springboot_backend/pensioner-auth/pom.xml
+++ b/Springboot_backend/pensioner-auth/pom.xml
@@ -105,6 +105,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>pmp-auth-server-executable</finalName>
 	</build>
 
 </project>
