--- a/Springboot_backend/pensioner-detail/src/main/resources/application.yml
+++ b/Springboot_backend/pensioner-detail/src/main/resources/application.yml
@@ -18,7 +18,8 @@ spring:
     console:
       enabled: true
       path: /h2-ui
-server-port: '8000'
+server:
+  port: '8000'
 eureka:
   client:
     serviceUrl:
