--- a/Springboot_backend/pmp-gateway/pom.xml
+++ b/Springboot_backend/pmp-gateway/pom.xml
@@ -77,6 +77,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>pmp-gateway-executable</finalName>
 	</build>
 
 </project>
