--- a/Springboot_backend/pmp-server/pom.xml
+++ b/Springboot_backend/pmp-server/pom.xml
@@ -68,6 +68,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>pmp-sever-executable</finalName>
 	</build>
 
 </project>
