--- a/Springboot_backend/process-pension/pom.xml
+++ b/Springboot_backend/process-pension/pom.xml
@@ -82,6 +82,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>pmp-process-pension-executable</finalName>
 	</build>
 
 </project>
