--- a/Springboot_backend/process-pension/src/main/resources/application.yml
+++ b/Springboot_backend/process-pension/src/main/resources/application.yml
@@ -3,7 +3,8 @@ spring:
     name: process-pension
   config:
     import: 'optional:configserver:http://localhost:8888/'
-server-port: '8000'
+server:
+  port: '8100'
 eureka:
   client:
     serviceUrl:
